# immoral-engine

./: Cargo.toml  README.md
assets/: baldman.dae
lib/assimp/: .gitignore  .travis.yml  Cargo.toml  Cargo.toml.orig
lib/assimp-sys/: Cargo.toml  build.rs
lib/assimp-sys/src/: config.rs  postprocess.rs
lib/assimp-sys/tests/: version.rs
lib/assimp/examples/: render.rs
lib/assimp/src/: lib.rs
lib/assimp/src/import/: mod.rs  structs.rs
lib/assimp/src/log/: mod.rs
lib/assimp/src/math/: color3.rs  color4.rs  matrix3.rs  matrix4.rs  quaternion.rs  vector2.rs  vector3.rs
lib/assimp/src/scene/: face.rs  mesh.rs  scene.rs
lib/assimp/tests/: log.rs  math_conversion_tests.rs
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/glrs/: Cargo.toml
lib/glrs/src/: alloc.rs  buffer.rs  commands.rs  framebuffer.rs  lib.rs  shader.rs  texture.rs  vertex.rs
src/: components.rs  glrs.rs  main.rs  systems.rs
src/components/: mesh.rs  model.rs  player_controller.rs
src/glrs/: alloc.rs  buffer.rs  ctx.rs  framebuffer.rs  texture.rs
src/shaders/: shader.frag  shader.vert
src/systems/: gui.rs  player.rs  render.rs
src/systems/render/: allocs.rs
src/types/: camera.rs
