[package]
name = "immoral-engine"
version = "0.1.0"
authors = ["Icy Defiance <icydefiance@gmail.com>"]
edition = "2018"

[workspace]
members = ["lib/gl"]

[dependencies]
array-init = "0.1.1"
assimp = { path = "lib/assimp" }
assimp-sys = { path = "lib/assimp-sys" }
gl = { path = "lib/gl" }
glutin = "0.24.1"
image = "0.23.9"
nalgebra = "0.22.0"
shipyard = "0.4.1"
libz-sys = { version = "1.1.2", features = ["static"] }
