[package]
name = "immoral-engine"
version = "0.1.0"
authors = ["Icy Defiance <icydefiance@gmail.com>"]
edition = "2018"

[dependencies]
array-init = "0.1.1"
assimp = { path = "lib/assimp" }
assimp-sys = { path = "lib/assimp-sys" }
glrs = { git = "https://github.com/nice-game/glrs" }
glutin = "0.24.1"
image = "0.23.9"
nalgebra = "0.22.0"
shipyard = { version = "0.4.1", features = ["non_send", "non_sync"] }
libz-sys = { version = "1.1.2", features = ["static"] }
